message-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    run: message-service
  type: NodePort
